// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDataGridColumnSorting columnSorting [React 17] renders a toolbar button/popover allowing users to set column sorting 1`] = `
<div
  class="euiPopover emotion-euiPopover"
  data-test-subj="dataGridColumnSortingPopover"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <button
      class="euiButtonEmpty euiDataGrid__controlBtn euiDataGrid__controlBtn--active emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
      data-test-subj="dataGridColumnSortingButton"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="sortable"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          1 field sorted
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`useDataGridColumnSorting columnSorting [React 17] renders a toolbar button/popover allowing users to set column sorting 2`] = `
<div
  aria-describedby="generated-id"
  aria-live="off"
  aria-modal="true"
  class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel-hasDragDrop-bottom"
  data-autofocus="true"
  data-popover-panel="true"
  role="dialog"
  style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
  tabindex="0"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
    data-popover-arrow="bottom"
    style="left: 10px; top: 0px;"
  />
  <p
    class="emotion-euiScreenReaderOnly"
    id="generated-id"
  >
    You are in a dialog. Press Escape, or tap/click outside the dialog to close.
  </p>
  <div>
    <div
      aria-live="assertive"
      class="euiDataGrid__controlScroll"
      role="region"
    >
      <div
        class="euiDroppable euiDroppable--noGrow"
        data-rfd-droppable-context-id="0"
        data-rfd-droppable-id="columnSorting"
        data-test-subj="droppable"
      >
        <div
          class="euiDraggable euiDraggable--hasCustomDragHandle"
          data-rfd-draggable-context-id="0"
          data-rfd-draggable-id="columnA"
          data-test-subj="draggable"
          role="group"
        >
          <div
            class="euiDataGridColumnSorting__item false euiDraggable__item euiDraggable__item--hasCustomDragHandle"
          >
            <p
              class="emotion-euiScreenReaderOnly"
            >
              Column A is sorting this data grid
            </p>
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
              data-test-subj="euiDataGridColumnSorting-sortColumn-columnA"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  aria-label="Remove Column A from data grid sort"
                  class="euiButtonIcon euiDataGridColumnSorting__button emotion-euiButtonIcon-xs-empty-text"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="cross"
                  />
                </button>
              </div>
              <div
                aria-describedby="rfd-hidden-text-0-hidden-text-0"
                aria-hidden="true"
                class="euiFlexItem euiDataGridColumnSorting__name emotion-euiFlexItem-grow-1"
                data-rfd-drag-handle-context-id="0"
                data-rfd-drag-handle-draggable-id="columnA"
                draggable="false"
                role="button"
                tabindex="-1"
              >
                <div
                  class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
                >
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <span
                      class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
                    >
                      <span
                        data-euiicon-type="tokenNumber"
                      />
                    </span>
                  </div>
                  <div
                    class="euiFlexItem emotion-euiFlexItem-grow-1"
                  >
                    <div
                      class="euiText emotion-euiText-xs"
                    >
                      <p>
                        Column A
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <fieldset
                  class="euiButtonGroup euiDataGridColumnSorting__order emotion-euiButtonGroup-fullWidth"
                >
                  <legend
                    class="emotion-euiScreenReaderOnly"
                  >
                    Select sorting method for Column A
                  </legend>
                  <div
                    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
                  >
                    <label
                      class="euiButtonGroupButton euiButtonGroupButton-isSelected emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text"
                      data-test-subj="euiDataGridColumnSorting-sortColumn-columnA-asc"
                      title="Low-High"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="Low-High"
                        >
                          <input
                            checked=""
                            class="euiScreenReaderOnly"
                            data-test-subj="columnAAsc"
                            name="columnA"
                            type="radio"
                            value="asc"
                          />
                          Low-High
                        </span>
                      </span>
                    </label>
                    <label
                      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                      data-test-subj="euiDataGridColumnSorting-sortColumn-columnA-desc"
                      title="High-Low"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="High-Low"
                        >
                          <input
                            class="euiScreenReaderOnly"
                            data-test-subj="columnADesc"
                            name="columnA"
                            type="radio"
                            value="desc"
                          />
                          High-Low
                        </span>
                      </span>
                    </label>
                  </div>
                </fieldset>
              </div>
              <div
                aria-describedby="rfd-hidden-text-0-hidden-text-0"
                aria-label="Drag handle"
                class="euiFlexItem emotion-euiFlexItem-growZero"
                data-rfd-drag-handle-context-id="0"
                data-rfd-drag-handle-draggable-id="columnA"
                draggable="false"
                role="button"
                tabindex="0"
              >
                <span
                  color="subdued"
                  data-euiicon-type="grab"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiDroppable__placeholder"
        />
      </div>
    </div>
    <div
      class="euiPopoverFooter emotion-euiPopoverFooter-s-s"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-spaceBetween-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSortingPopoverColumnSelection"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
                data-test-subj="dataGridColumnSortingSelectionButton"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    Pick fields to sort by
                  </span>
                  <span
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <button
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-right"
            data-test-subj="dataGridColumnSortingClearButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Clear sorting
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useDataGridColumnSorting columnSorting [React 18] renders a toolbar button/popover allowing users to set column sorting 1`] = `
<div
  class="euiPopover emotion-euiPopover"
  data-test-subj="dataGridColumnSortingPopover"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <button
      class="euiButtonEmpty euiDataGrid__controlBtn euiDataGrid__controlBtn--active emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
      data-test-subj="dataGridColumnSortingButton"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="sortable"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          1 field sorted
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`useDataGridColumnSorting columnSorting [React 18] renders a toolbar button/popover allowing users to set column sorting 2`] = `
<div
  aria-describedby="generated-id"
  aria-live="off"
  aria-modal="true"
  class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel emotion-euiPanel-grow-m-s-plain-euiPopover__panel-hasDragDrop-bottom"
  data-autofocus="true"
  data-popover-panel="true"
  role="dialog"
  style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
  tabindex="0"
>
  <div
    class="euiPopover__arrow emotion-euiPopoverArrow-bottom"
    data-popover-arrow="bottom"
    style="left: 10px; top: 0px;"
  />
  <p
    class="emotion-euiScreenReaderOnly"
    id="generated-id"
  >
    You are in a dialog. Press Escape, or tap/click outside the dialog to close.
  </p>
  <div>
    <div
      aria-live="assertive"
      class="euiDataGrid__controlScroll"
      role="region"
    >
      <div
        class="euiDroppable euiDroppable--noGrow"
        data-rfd-droppable-context-id=":r0:"
        data-rfd-droppable-id="columnSorting"
        data-test-subj="droppable"
      >
        <div
          class="euiDraggable euiDraggable--hasCustomDragHandle"
          data-rfd-draggable-context-id=":r0:"
          data-rfd-draggable-id="columnA"
          data-test-subj="draggable"
          role="group"
        >
          <div
            class="euiDataGridColumnSorting__item false euiDraggable__item euiDraggable__item--hasCustomDragHandle"
          >
            <p
              class="emotion-euiScreenReaderOnly"
            >
              Column A is sorting this data grid
            </p>
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
              data-test-subj="euiDataGridColumnSorting-sortColumn-columnA"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  aria-label="Remove Column A from data grid sort"
                  class="euiButtonIcon euiDataGridColumnSorting__button emotion-euiButtonIcon-xs-empty-text"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="cross"
                  />
                </button>
              </div>
              <div
                aria-describedby="rfd-hidden-text-:r0:-hidden-text-:r1:"
                aria-hidden="true"
                class="euiFlexItem euiDataGridColumnSorting__name emotion-euiFlexItem-grow-1"
                data-rfd-drag-handle-context-id=":r0:"
                data-rfd-drag-handle-draggable-id="columnA"
                draggable="false"
                role="button"
                tabindex="-1"
              >
                <div
                  class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
                >
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <span
                      class="euiToken emotion-euiToken-square-light-s-euiColorVis0"
                    >
                      <span
                        data-euiicon-type="tokenNumber"
                      />
                    </span>
                  </div>
                  <div
                    class="euiFlexItem emotion-euiFlexItem-grow-1"
                  >
                    <div
                      class="euiText emotion-euiText-xs"
                    >
                      <p>
                        Column A
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <fieldset
                  class="euiButtonGroup euiDataGridColumnSorting__order emotion-euiButtonGroup-fullWidth"
                >
                  <legend
                    class="emotion-euiScreenReaderOnly"
                  >
                    Select sorting method for Column A
                  </legend>
                  <div
                    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-compressed"
                  >
                    <label
                      class="euiButtonGroupButton euiButtonGroupButton-isSelected emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-fill-text"
                      data-test-subj="euiDataGridColumnSorting-sortColumn-columnA-asc"
                      title="Low-High"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="Low-High"
                        >
                          <input
                            checked=""
                            class="euiScreenReaderOnly"
                            data-test-subj="columnAAsc"
                            name="columnA"
                            type="radio"
                            value="asc"
                          />
                          Low-High
                        </span>
                      </span>
                    </label>
                    <label
                      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
                      data-test-subj="euiDataGridColumnSorting-sortColumn-columnA-desc"
                      title="High-Low"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
                      >
                        <span
                          class="eui-textTruncate emotion-euiButtonGroupButton__text"
                          data-text="High-Low"
                        >
                          <input
                            class="euiScreenReaderOnly"
                            data-test-subj="columnADesc"
                            name="columnA"
                            type="radio"
                            value="desc"
                          />
                          High-Low
                        </span>
                      </span>
                    </label>
                  </div>
                </fieldset>
              </div>
              <div
                aria-describedby="rfd-hidden-text-:r0:-hidden-text-:r1:"
                aria-label="Drag handle"
                class="euiFlexItem emotion-euiFlexItem-growZero"
                data-rfd-drag-handle-context-id=":r0:"
                data-rfd-drag-handle-draggable-id="columnA"
                draggable="false"
                role="button"
                tabindex="0"
              >
                <span
                  color="subdued"
                  data-euiicon-type="grab"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiDroppable__placeholder"
        />
      </div>
    </div>
    <div
      class="euiPopoverFooter emotion-euiPopoverFooter-s-s"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-spaceBetween-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSortingPopoverColumnSelection"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-left"
                data-test-subj="dataGridColumnSortingSelectionButton"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    Pick fields to sort by
                  </span>
                  <span
                    color="inherit"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <button
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-right"
            data-test-subj="dataGridColumnSortingClearButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Clear sorting
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
